--- a/src/commands/calculate-and-evaluate.yml
+++ b/src/commands/calculate-and-evaluate.yml
@@ -5,10 +5,6 @@ description: |
 
   [1]: https://www.npmjs.com/package/junit-reports-combiner
 parameters:
-  executor:
-    description: Specify the image used to execute analysis
-    type: executor
-    default: default
   analysis-name:
     description: Analysis name
     type: string
@@ -30,11 +26,24 @@ parameters:
     description: Specify the environment variable name where the VCS (Version Control System) API token is set.
     type: env_var_name
     default: GITHUB_TOKEN
-executor: << parameters.executor >>
 steps:
-  - calculate-and-evaluate:
+  - set-analysis-result-paths:
       analysis-name: << parameters.analysis-name >>
-      calculate: << parameters.calculate >>
+      analysis-results-path: << parameters.analysis-results-path >>
+  - steps: << parameters.calculate >>
+  - evaluate:
+      analysis-name: << parameters.analysis-name >>
+      analysis-results-path: << parameters.analysis-results-path >>
+      pattern: '.*/DELTA-analysis-results\.xml$'
+  - transform:
+      analysis-name: << parameters.analysis-name >>
       analysis-results-path: << parameters.analysis-results-path >>
       test-results-path: << parameters.test-results-path >>
+      pattern: '.*/DELTA-analysis-results\.xml$'
+  - store_test_results:
+      path: << parameters.test-results-path >>
+  - comment:
+      analysis-name: << parameters.analysis-name >>
+      analysis-results-path: << parameters.analysis-results-path >>
+      pattern: '.*/DELTA-analysis-results\.xml$'
       vcs-api-token: << parameters.vcs-api-token >>
