--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -8,6 +8,17 @@ parameters:
     description: Amount of CPU and RAM allocated to each container in a job.
     type: string
     default: small
+  project-git_url:
+    description: "Please set << pipeline.project.git_url >>"
+    type: string
+  git-base_revision:
+    description: "Please set << pipeline.git-base_revision >>"
+    type: string
+  git-revision:
+    description: "Please set << pipeline.git-revision >>"
+    type: string
 docker:
   - image: << parameters.docker-image >>
+environment:
+  CIRCLE_COMPARE_URL: << parameters.project-git_url >>/compare/<< parameters.git-base_revision >>..<< parameters.git-revision >>
 resource_class: << parameters.resource_class >>
