--- a/src/commands/analyze-and-evaluate.yml
+++ b/src/commands/analyze-and-evaluate.yml
@@ -4,14 +4,6 @@ parameters:
     description: Check-out the BASE branch if true is specified
     type: boolean
     default: false
-  has-reconstructed:
-    description: Specify true if `compare-url/reconstruct` has not been executed yet
-    type: boolean
-    default: false
-  attach-compare-url-workspace:
-    description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
-    type: boolean
-    default: false
   analysis-name:
     description: Analysis name
     type: string
@@ -33,6 +25,10 @@ parameters:
     description: Specify the environment variable name where the VCS (Version Control System) API token is set.
     type: env_var_name
     default: GITHUB_TOKEN
+  circle_compare_url-path:
+    description: "Specify the path of `CIRCLE_COMPARE_URL.txt` if you are using `iynere/compare-url` orb"
+    type: string
+    default: ""
 steps:
   - set-result-path:
       analysis-name: << parameters.analysis-name >>
@@ -40,9 +36,8 @@ steps:
       is-target-branch-base: << parameters.is-target-branch-base >>
   - checkout-analysis-target:
       is-target-branch-base: << parameters.is-target-branch-base >>
-      has-reconstructed: << parameters.has-reconstructed >>
-      attach-compare-url-workspace: << parameters.attach-compare-url-workspace >>
       vcs-api-token: << parameters.vcs-api-token >>
+      circle_compare_url-path: << parameters.circle_compare_url-path >>
   - steps: << parameters.analyze >>
   - when:
       condition: << parameters.test-results-path >>
