--- a/src/commands/execute.yml
+++ b/src/commands/execute.yml
@@ -1,13 +1,5 @@
 description: alculate the difference of static code analysis results between HEAD branch and BASE branch
 parameters:
-  has-reconstructed:
-    description: Specify true if `compare-url/reconstruct` has not been executed yet
-    type: boolean
-    default: false
-  attach-compare-url-workspace:
-    description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
-    type: boolean
-    default: false
   analyze:
     description: Specify analysis steps
     type: steps
@@ -34,6 +26,10 @@ parameters:
     description: Specify the environment variable name where the VCS (Version Control System) API token is set.
     type: env_var_name
     default: GITHUB_TOKEN
+  circle_compare_url-path:
+    description: "Specify the path of `CIRCLE_COMPARE_URL.txt` if you are using `iynere/compare-url` orb"
+    type: string
+    default: ""
 steps:
   # steps to analyze HEAD
   - checkout-analysis-target:
@@ -46,9 +42,8 @@ steps:
   - checkout-analysis-target:
       path: << parameters.project-path >>
       is-target-branch-base: true
-      has-reconstructed: << parameters.has-reconstructed >>
-      attach-compare-url-workspace: << parameters.attach-compare-url-workspace >>
       vcs-api-token: << parameters.vcs-api-token >>
+      circle_compare_url-path: << parameters.circle_compare_url-path >>
   - set-result-path:
       analysis-name: << parameters.analysis-name >>
       analysis-results-path: << parameters.analysis-results-path >>
