--- a/src/jobs/analyze.yml
+++ b/src/jobs/analyze.yml
@@ -4,6 +4,14 @@ parameters:
     description: Specify the image used to execute analysis
     type: executor
     default: default
+  resource_class:
+    description: Amount of CPU and RAM allocated to each container in a job.
+    type: string
+    default: small
+  parallelism:
+    description: If parallelism is set to N > 1, then N independent executors will be set up and each will run the steps of that job in parallel.
+    type: integer
+    default: 1
   is-target-branch-base:
     description: Check-out the BASE branch if true is specified
     type: boolean
@@ -34,6 +42,8 @@ parameters:
     type: string
     default: ""
 executor: << parameters.executor >>
+resource_class: << parameters.resource_class >>
+parallelism: << parameters.parallelism >>
 steps:
   - analyze-and-evaluate:
       is-target-branch-base: << parameters.is-target-branch-base >>
